working serialization with JSON

--- a/EyeemMemory/EyeemMemory/EyeemMemory.csproj
+++ b/EyeemMemory/EyeemMemory/EyeemMemory.csproj
@@ -50,20 +50,33 @@
   <ItemGroup>
     <Reference Include="Microsoft.Phone" />
     <Reference Include="Microsoft.Phone.Interop" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Servicemodel" />
+    <Reference Include="System.Servicemodel.Web" />
     <Reference Include="System.Windows" />
     <Reference Include="system" />
     <Reference Include="System.Core" />
     <Reference Include="System.Net" />
     <Reference Include="System.Xml" />
     <Reference Include="mscorlib.extensions" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Xml.Serialization" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Helper\JSONHelper.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Models\EyeemAlbum.cs" />
+    <Compile Include="Models\EyeemAlbumContainer.cs" />
+    <Compile Include="Models\EyeemPhoto.cs" />
+    <Compile Include="Models\EyeemPhotoItem.cs" />
+    <Compile Include="Models\EyeemRootObject.cs" />
+    <Compile Include="Models\EyeemTopic.cs" />
+    <Compile Include="Models\EyeemTopicContainer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
